Changes to schedule to reflect class format: - Removed all dates - Changed 'Remote' -> 'Homework' - Changed visual appearance of Homework blocks

--- a/app/views/pages/schedule.html.haml
+++ b/app/views/pages/schedule.html.haml
@@ -93,7 +93,7 @@
       .container.schedule.text-left
         .row
           .col-xs-12
-            %h4 Week 1 (29th September — 3rd October 2014)
+            %h4 Week 1 
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
               %li.list-group-item.active
@@ -106,9 +106,9 @@
               %li.list-group-item Static content with routes and views
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
-              %li.list-group-item.active
+              %li.list-group-item.list-group-item-info
                 %span.glyphicon.glyphicon-home
-                Remote
+                Homework
               %li.list-group-item Creation of static content pages
               %li.list-group-item Utilise routes, controllers, and views
               %li.list-group-item Application design &amp; specification
@@ -122,15 +122,15 @@
               %li.list-group-item Model validation
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
-              %li.list-group-item.active
+              %li.list-group-item.list-group-item-info
                 %span.glyphicon.glyphicon-home
-                Remote
+                Homework
               %li.list-group-item Introduction to RSpec
               %li.list-group-item Unit tests for user profile model
               %li.list-group-item Add user profile model, view, and controller
         .row
           .col-xs-12
-            %h4 Week 2 (5th October — 11th October 2014)
+            %h4 Week 2 
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
               %li.list-group-item.active
@@ -141,9 +141,9 @@
               %li.list-group-item Partials in Rails
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
-              %li.list-group-item.active
+              %li.list-group-item.list-group-item-info
                 %span.glyphicon.glyphicon-home
-                Remote
+                Homework
               %li.list-group-item Separation of app layout into partials
               %li.list-group-item Deployment of modified code to Heroku
               %li.list-group-item Use of Git to publish and deploy code
@@ -157,9 +157,9 @@
               %li.list-group-item Filters / Scopes (search form / listing)
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
-              %li.list-group-item.active
+              %li.list-group-item.list-group-item-info
                 %span.glyphicon.glyphicon-home
-                Remote
+                Homework
               %li.list-group-item Dynamic navigation
               %li.list-group-item Unit Testing for sign in
               %li.list-group-item Unit Testing for sign-up
@@ -167,7 +167,7 @@
 
         .row
           .col-xs-12
-            %h4 Week 3 (October 12th — 18th October 2014)
+            %h4 Week 3 
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
               %li.list-group-item.active
@@ -177,9 +177,9 @@
               %li.list-group-item Set up and integrate SendGrid
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
-              %li.list-group-item.active
+              %li.list-group-item.list-group-item-info
                 %span.glyphicon.glyphicon-home
-                Remote
+                Homework
               %li.list-group-item Complete mailers for:
               %li.list-group-item Sign-up
               %li.list-group-item Password reset
@@ -195,14 +195,14 @@
               %li.list-group-item Customising Bootstrap
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
-              %li.list-group-item.active
+              %li.list-group-item.list-group-item-info
                 %span.glyphicon.glyphicon-home
-                Remote
+                Homework
               %li.list-group-item Implementation of Bootstrap
 
         .row
           .col-xs-12
-            %h4 Week 4 (October 19th — 25th October 2014)
+            %h4 Week 4 
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
               %li.list-group-item.active
@@ -213,9 +213,9 @@
               %li.list-group-item Database associations
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
-              %li.list-group-item.active
+              %li.list-group-item.list-group-item-info
                 %span.glyphicon.glyphicon-home
-                Remote
+                Homework
               %li.list-group-item Search Profiles (multi-table)
               %li.list-group-item Unit Testing for DB associations
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
@@ -228,9 +228,9 @@
               %li.list-group-item Advanced debugging techniques
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
-              %li.list-group-item.active
+              %li.list-group-item.list-group-item-info
                 %span.glyphicon.glyphicon-home
-                Remote
+                Homework
               %li.list-group-item Unit Testing for API/external services
               %li.list-group-item Unit Testing for more complex validations
               %li.list-group-item Unit Testing for roles
@@ -239,7 +239,7 @@
 
         .row
           .col-xs-12
-            %h4 Week 5 (October 26th — November 1st 2014)
+            %h4 Week 5 
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
               %li.list-group-item.active
@@ -251,9 +251,9 @@
               %li.list-group-item Latitude/Longitude handling
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
-              %li.list-group-item.active
+              %li.list-group-item.list-group-item-info
                 %span.glyphicon.glyphicon-home
-                Remote
+                Homework
               %li.list-group-item Implementation of Geolocation
               %li.list-group-item Implementation of Google Maps
               %li.list-group-item Implementation of Lat/Long handling
@@ -265,15 +265,15 @@
               %li.list-group-item Single Table Inheritance (STI)
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
-              %li.list-group-item.active
+              %li.list-group-item.list-group-item-info
                 %span.glyphicon.glyphicon-home
-                Remote
+                Homework
               %li.list-group-item Usage of STI
               %li.list-group-item Completion of Google Maps / Geolocation integration
 
         .row
           .col-xs-12
-            %h4 Week 6 (November 2nd — November 8th 2014)
+            %h4 Week 6 
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
               %li.list-group-item.active
@@ -283,9 +283,9 @@
               %li.list-group-item Image thumbnails
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
-              %li.list-group-item.active
+              %li.list-group-item.list-group-item-info
                 %span.glyphicon.glyphicon-home
-                Remote
+                Homework
               %li.list-group-item File attachments and Image thumbnailing integration
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
@@ -296,15 +296,15 @@
               %li.list-group-item Mailer attachments
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
-              %li.list-group-item.active
+              %li.list-group-item.list-group-item-info
                 %span.glyphicon.glyphicon-home
-                Remote
+                Homework
               %li.list-group-item Integration of PDF generation
               %li.list-group-item Mailers with PDFs attached
 
         .row
           .col-xs-12
-            %h4 Week 7 (November 9th — November 15th 2014)
+            %h4 Week 7 
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
               %li.list-group-item.active
@@ -313,9 +313,9 @@
               %li.list-group-item Payment Gateway Integration (Part 1)
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
-              %li.list-group-item.active
+              %li.list-group-item.list-group-item-info
                 %span.glyphicon.glyphicon-home
-                Remote
+                Homework
               %li.list-group-item Implementation of Payment Gateway (Part 1)
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
@@ -325,14 +325,14 @@
               %li.list-group-item Payment Gateway Integration (Part 2)
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
-              %li.list-group-item.active
+              %li.list-group-item.list-group-item-info
                 %span.glyphicon.glyphicon-home
-                Remote
+                Homework
               %li.list-group-item Implementation of Payment Gateway (Part 2)
 
         .row
           .col-xs-12
-            %h4 Week 8 (November 16th — November 22nd 2014)
+            %h4 Week 8 
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
               %li.list-group-item.active
@@ -343,7 +343,7 @@
 
         .row
           .col-xs-12
-            %h4 Week 9 (November 23rd — November 29th 2014)
+            %h4 Week 9 
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
               %li.list-group-item.active
@@ -353,11 +353,11 @@
 
         .row
           .col-xs-12
-            %h4 Week 10-12 (November 30th — December 31st 2014)
+            %h4 Week 10
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
-              %li.list-group-item.active
+              %li.list-group-item.list-group-item-info
                 %span.glyphicon.glyphicon-user
-                Remote
+                Homework
               %li.list-group-item Beta Testing
               %li.list-group-item v1.0 Deployed
