Removed the words "Please Note:" from the Students block on the front page

--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -30,9 +30,7 @@
       %p If you are in your final year and love to code, drop us a note and want to join in this awesome program just drop us a note and we shall see what we can do. Space is seriously limited so do what you gotta do - we will select the most awesome of the awesome.
 
       %p
-        %b Please Note:
-        This is a 
-        %b 1-month full-time course at our facility
+        %b This is a 1-month full-time course at our facility
         followed by 2 months of online-learning.
 
       %a.btn.btn-primary{href: 'https://docs.google.com/forms/d/1i7ptmqt9Zl-4j02-fVU7dqeXKPLeJIUaCLlGbNgy2YU/viewform'} I Want In!
