--- a/app/views/pages/projects.html.haml
+++ b/app/views/pages/projects.html.haml
@@ -1,3 +1,4 @@
+- start_time = Date.new(2015,1,10)
 .container
   .row
     .col-xs-12.page-header
@@ -27,7 +28,7 @@
     .col-xs-4
       .media
         %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
-          %img{src: "holder.js/64x64"}
+          %img{src: '/assets/profile_pics/breena.jpg', width: '62px', height: '62px'}
         .media-body
           %h4.media-heading Breena Theseira
           %p
@@ -35,14 +36,31 @@
 
           .hidden
             %p
-              %b My contribution &mdash;
-              My contribution was such and such, and this and that. I also built the thingamajig and so on.
+              %b How long before you graduate?
+              - finish_time = start_time + 18.months
+              %p
+                = distance_of_time_in_words(start_time, finish_time).titleize
             %p
-              %b What I'm looking for &mdash;
-              I'm looking to meet awesome programmers and cool people, and maybe travel a little.
+              %b Whats next, what do you see yourself doing with your life after you graduate?
+              
+              %p
+                I would generally be on a lookout for experience - in terms of internships & jobs.
+
+              %p
+                I would mainly be looking for web development projects/jobs in general to brush up Ruby on Rails skills, if possible with flexible hours. 
+
+              %p
+                In the meantime, I would also be looking for jobs to work with experienced web development freelancers, and then gradually move towards freelancing in the future.
             %p
-              %b My programmer superpower &mdash;
-              I can find bugs, and kill 'em. Fast.
+              %b What did you think about the program?
+              %p
+                I generally think that this program is super beneficial to any new programmers that has a basic background in software development. University students like me would find it enriching and an eye-opener especially towards job prospects in the future (I didn't know freelancing was another option aside from having corporate career).
+
+              %p
+                It was fun to meet new programmers and work together in a team to create an awesome solution that would benefit the people.
+
+              %p
+                Oh and I think that some basics about Javascripts should be included as well."
       .media
         %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
           %img{src: "holder.js/64x64"}
@@ -132,7 +150,8 @@
           .hidden
             %p
               %b My contribution &mdash;
-              My contribution was such and such, and this and that. I also built the thingamajig and so on.
+
+              distance_of_time_in_words(Date.new(2015,1,10), )
             %p
               %b What I'm looking for &mdash;
               I'm looking to meet awesome programmers and cool people, and maybe travel a little.
