Add Grace's Photo

--- a/app/views/pages/projects.html.haml
+++ b/app/views/pages/projects.html.haml
@@ -84,7 +84,7 @@
                   University students in the first or second year should give this program a shot. Also, students who have just graduated from school or are seeking courses in web development to learn latest/industry tools used by professionals. Lastly, anyone who has a deep deep desire to learn how webpages should be interested to join this program."
       .media
         %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
-          %img{src: "holder.js/64x64"}
+          %img{src: '/assets/profile_pics/GraceTee.png', width: '62px', height: '62px'}
         .media-body
           %h4.media-heading Grace Tee Hui En
           .hidden
