How many semesters. Not length of time

--- a/app/views/pages/projects.html.haml
+++ b/app/views/pages/projects.html.haml
@@ -36,9 +36,9 @@
 
           .hidden
             %p
-              %b How long before you graduate?
-
-              - finish_time = start_time + 18.months
+              %b How many semesters do you have before you graduate?
+              %p
+                1 1/2
               %p
                 = "In " + distance_of_time_in_words(start_time, finish_time)#.titleize
             %p
@@ -89,11 +89,9 @@
           %h4.media-heading Grace Tee Hui En
           .hidden
             %p
-              %b How long before you graduate?
-
-              - finish_time = start_time + 18.months
+              %b How many semesters do you have before you graduate?
               %p
-                = "In " + distance_of_time_in_words(start_time, finish_time)#.titleize
+                1 1/2
             %p
               %b Whats next, what do you see yourself doing with your life after you graduate?
               
