Add Tan Ching Loong's Profile

--- a/app/views/pages/projects.html.haml
+++ b/app/views/pages/projects.html.haml
@@ -39,8 +39,6 @@
               %b How many semesters do you have before you graduate?
               %p
                 1 1/2
-              %p
-                = "In " + distance_of_time_in_words(start_time, finish_time)#.titleize
             %p
               %b Whats next, what do you see yourself doing with your life after you graduate?
               
@@ -130,51 +128,31 @@
 
           .hidden
             %p
-              %b How long before you graduate?
-
-              - finish_time = start_time + 18.months
+              %b How many semesters do you have before you graduate?
               %p
-                = "In " + distance_of_time_in_words(start_time, finish_time)#.titleize
+                Graduated already
             %p
               %b Whats next, what do you see yourself doing with your life after you graduate?
               
               %p
-                #Answers
+                Become a better programmer. Build better software.
 
-              %p
-                #Answers
-
-              %p
-                #Answers
             %p
               %b What did you think about the program?
               %p
-                #Answers
+                Good guidance and advice from senior developer. Hands on work favours understanding of new knowledge.
 
-              %p
-                #Answers
-              %p
-                #Answers
             %p
               %b What are your aspirations?
               %p
                 %p
-                  #Answers
-                %p
-                  #Answers
-                %p
-                  #Answers
-                %p
-                  #Answers
+                  Contribute to make Malaysia better.
+         
             %p
               %b What would you say to someone that is interested to join this program
               %p
                 %p
-                  #Answers
-                %p
-                  #Answers
-                %p
-                  #Answers
+                  Learn by doing can understand faster. It gets even better when being taught by good mentor. This program is a combination of both.
 
 
     .col-xs-4
