--- a/app/views/pages/projects.html.haml
+++ b/app/views/pages/projects.html.haml
@@ -279,51 +279,59 @@
 
           .hidden
             %p
-              %b How long before you graduate?
-
-              - finish_time = start_time + 18.months
+              %b How many semesters do you have before you graduate?
               %p
-                = "In " + distance_of_time_in_words(start_time, finish_time)#.titleize
+                1
             %p
               %b Whats next, what do you see yourself doing with your life after you graduate?
               
               %p
-                #Answers
+                Freelancer: Aspiring to work with other developers as a freelancer to create awesome possum web development projects
 
               %p
-                #Answers
+                Entreprenuer: Dream to start my own digital firm/ web development company/ marketing agency
 
               %p
-                #Answers
+                In short: I want to make awesome web applications that people will recognise, use on a daily basis or even change people's lives, with flexible working hours and being able to work from anywhere in the world. 
             %p
               %b What did you think about the program?
               %p
-                #Answers
+                Some nice things: I loved the culture among developers, something I wish to experience in my career or even better, create a similar culture in the team I aspire to build.
+
 
               %p
-                #Answers
-              %p
-                #Answers
+                Everyone was very friendly, helpful and patient. I learnt a whole lot from the program, including the technical and non technical aspects of it."
+
+          
             %p
               %b What are your aspirations?
               %p
                 %p
-                  #Answers
+                  Build awesome web applications that can:
+                  %ol
+                    %li change the world
+                    %li change people's lives
+                    %li be used by everyone in their daily lives
+
                 %p
-                  #Answers
-                %p
-                  #Answers
-                %p
-                  #Answers
+                  Start my own company that shares my dreams, goals and vision, where I can re-create this amazing culture that I have picked up from the program.
+
             %p
               %b What would you say to someone that is interested to join this program
               %p
                 %p
-                  #Answers
+                  * What should they be thinking?
+
+                  %p They should be thinking of enhancing their skills as a web developer and wanting to prepare themselves for the industry as the program teaches the industry standard tools, methodologies and more.
                 %p
-                  #Answers
+                  * What should they do to prepare?
+                  %p Brush up on HTML, CSS, Javascript. Other than that, come with an open mind, the willingness to learn and the attitude of tenacity and perseverance.
+
                 %p
-                  #Answers
+                  
+                  * Who should be interested in this program?
+                  %p Anyone who aspires to be a web developer.
+    
 
 
       .media
