Add Rayson profile and photo. Add Marco photo

--- a/app/views/pages/projects.html.haml
+++ b/app/views/pages/projects.html.haml
@@ -214,7 +214,7 @@
 
       .media
         %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
-          %img{src: "holder.js/64x64"}
+          %img{src: '/assets/profile_pics/Marco.jpg', width: '62px', height: '62px'}
         .media-body
           %h4.media-heading Marco Lim Choon Yun
           %p
@@ -222,51 +222,45 @@
 
           .hidden
             %p
-              %b How long before you graduate?
-
-              - finish_time = start_time + 18.months
+              %b How many semesters do you have before you graduate?
               %p
-                = "In " + distance_of_time_in_words(start_time, finish_time)#.titleize
+                1
+              
             %p
               %b Whats next, what do you see yourself doing with your life after you graduate?
               
               %p
-                #Answers
+                Work for a while, preferably startups, to gain more knowledge and strengthen my programming skills.
 
               %p
-                #Answers
+                Be part of a development team that build things that solve a real world problem, and enhances human life.
 
               %p
-                #Answers
+                Probably startup my own after a few years, or go freelance.
             %p
               %b What did you think about the program?
               %p
-                #Answers
+                It's good to be exposed to things that is up to date, and also understand how the real world project be like.
 
-              %p
-                #Answers
-              %p
-                #Answers
             %p
               %b What are your aspirations?
               %p
                 %p
-                  #Answers
+                  Build apps that matter and solve real world problem.
+
                 %p
-                  #Answers
+                  Travel and broaden my horizon.
+
                 %p
-                  #Answers
-                %p
-                  #Answers
+                  Try new sports like SKYDIVING!
             %p
               %b What would you say to someone that is interested to join this program
               %p
                 %p
-                  #Answers
+                  Get a Linux operating system (Ubuntu or Mint), dualboot or better yet ditch Windows because eventually you will end up using Linux in the future.
+
                 %p
-                  #Answers
-                %p
-                  #Answers
+                  Prepare for tons of awesomeness XD    
 
     .col-xs-4
       .media
@@ -336,7 +330,7 @@
 
       .media
         %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
-          %img{src: "holder.js/64x64"}
+          %img{src: '/assets/profile_pics/rayson.jpg', width: '62px', height: '62px'}
         .media-body
           %h4.media-heading Leong Chin Poh
           %p
@@ -344,51 +338,30 @@
 
           .hidden
             %p
-              %b How long before you graduate?
-
-              - finish_time = start_time + 18.months
+              %b How many semesters do you have before you graduate?
               %p
-                = "In " + distance_of_time_in_words(start_time, finish_time)#.titleize
+                Graduated Already
             %p
               %b Whats next, what do you see yourself doing with your life after you graduate?
               
               %p
-                #Answers
+                Great! Will start some awesome work and studies!!
 
-              %p
-                #Answers
-
-              %p
-                #Answers
             %p
               %b What did you think about the program?
               %p
-                #Answers
+                Perfect! Great tutors great participants, the experience just awesome. =D
 
-              %p
-                #Answers
-              %p
-                #Answers
             %p
               %b What are your aspirations?
               %p
                 %p
-                  #Answers
-                %p
-                  #Answers
-                %p
-                  #Answers
-                %p
-                  #Answers
+                  Assist in any helping mankind or revolution industry work
             %p
               %b What would you say to someone that is interested to join this program
               %p
                 %p
-                  #Answers
-                %p
-                  #Answers
-                %p
-                  #Answers
+                  Prepare yourself with the knowledge of development life cycle, basic programming knowledge will do, and most importantly, be awesome! =D
 
 
 
