Add prasanth and leo's profiles
* Add their photos.
* Add sections for Skillcounter and magicbeans

--- a/app/views/pages/projects.html.haml
+++ b/app/views/pages/projects.html.haml
@@ -363,8 +363,106 @@
                 %p
                   Prepare yourself with the knowledge of development life cycle, basic programming knowledge will do, and most importantly, be awesome! =D
 
+  .row.project
+    .col-xs-12
+      = image_tag 'skillcounter.png', class: 'pull-right'
+
+      %h3#d2dd
+        Skillcounter
+        %small CPD made easy
+
+      %p An online CPD management for the Malaysian Veterinary Council.Skillcounter allows the MVC to manage it's CPD events and monitor their members' progress through a simple online interface that tracks their members' points accumulation, license redemptions and event attendances.
+
+  .row.students
+    .col-xs-4
+      .media
+        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
+          %img{src: '/assets/profile_pics/leo.jpg', width: '62px', height: '62px'}
+        .media-body
+          %h4.media-heading Leo Ng Zhi Yong
+          %p
+            %i Asia Pacific University
+
+          .hidden
+            %p
+              %b How many semesters do you have before you graduate?
+              %p
+                2
+            %p
+              %b Whats next, what do you see yourself doing with your life after you graduate?
+              
+              %p
+                Working in IT for several years at the very least. Look for opportunities to leave the country.
+
+            %p
+              %b What did you think about the program?
+              %p
+                Great exposure to a new language and being able to develop applications for an actual client.
+
+            %p
+              %b What are your aspirations?
+              %p
+                %p
+                  Nothing concrete for the time being.
+            %p
+              %b What would you say to someone that is interested to join this program
+              %p
+                %p
+                  They will need to learn how to become much more independent as a developer as compared to when they were in university.
 
 
+
+  .row.project
+    .col-xs-12
+      = image_tag 'magicbeans.png', class: 'pull-right'
+
+      %h3#d2dd
+        Social Media Publishing 
+        %small 
+
+      %p An in house social media publishing platform for Magic to keep track of their events’ social media presence. The app aims to allow Magic admins to have one-click actions to publish and share their events via social media outlets including Twitter, Facebook, and email blasts to mailing lists.
+
+  .row.students
+    .col-xs-4
+      .media
+        %a.media-left.media-middle.pull-left{'data-toggle'=>"modal", 'data-target'=>"#profile"}
+          %img{src: '/assets/profile_pics/prasanth.jpg', width: '62px', height: '62px'}
+        .media-body
+          %h4.media-heading Prasanth Kasi Rajan
+          %p
+            %i Multi Media University
+
+          .hidden
+            %p
+              %b How many semesters do you have before you graduate?
+              %p
+                1
+            %p
+              %b Whats next, what do you see yourself doing with your life after you graduate?
+              
+              %p
+                Joining a company that best suits my qualification, pick up some new skills and progress further."
+
+            %p
+              %b What did you think about the program?
+              %p
+                Awesome program, awesome instructor. I owe you guys big time.
+
+            %p
+              %b What are your aspirations?
+              %p
+                %p
+                  Start a startup soon. 
+                %p
+                  Build a company.
+            %p
+              %b What would you say to someone that is interested to join this program
+              %p
+                %p
+                  Get ready for a whole lot fun with codes.
+                  Heads up, learn the basics of Ruby before you begin.
+
+ 
 .modal.fade#profile{role: :dialog, "aria-hidden" => :true}
   .modal-dialog.modal-md
     .modal-content
